testsuite/poke.pkl/break-diag-5.pk
/* { dg-do compile } */

while (1)
  {
    type lala = int[{break;} ?! E_generic]; /* { dg-error "" } */
  }
